--- a/homework/Day_007_HW.ipynb
+++ b/homework/Day_007_HW.ipynb
@@ -825,6 +825,7 @@
     "from scipy.stats import mode\n",
     "\n",
     "value_most = mode(app_train[~app_train['AMT_GOODS_PRICE'].isnull()]['AMT_GOODS_PRICE'])\n",
+    "#print(app_train['AMT_GOODS_PRICE'].value_counts().head())\n",
     "print(value_most)\n",
     "\n",
     "mode_goods_price = list(app_train['AMT_GOODS_PRICE'].value_counts().index)\n",
