--- a/homework/Day_008_HW.ipynb
+++ b/homework/Day_008_HW.ipynb
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -431,17 +431,17 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>202500.0</td>\n",
-       "      <td>0.491521</td>\n",
+       "      <td>0.491536</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>270000.0</td>\n",
-       "      <td>0.972434</td>\n",
+       "      <td>0.972437</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>67500.0</td>\n",
-       "      <td>-0.934706</td>\n",
+       "      <td>-0.934708</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -451,7 +451,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>121500.0</td>\n",
-       "      <td>-0.426135</td>\n",
+       "      <td>-0.426136</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -459,14 +459,14 @@
       ],
       "text/plain": [
        "   AMT_INCOME_TOTAL  AMT_INCOME_TOTAL_Z_BY_CHILDREN_GRP-TARGET\n",
-       "0          202500.0                                   0.491521\n",
-       "1          270000.0                                   0.972434\n",
-       "2           67500.0                                  -0.934706\n",
+       "0          202500.0                                   0.491536\n",
+       "1          270000.0                                   0.972437\n",
+       "2           67500.0                                  -0.934708\n",
        "3          135000.0                                  -0.298993\n",
-       "4          121500.0                                  -0.426135"
+       "4          121500.0                                  -0.426136"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +476,7 @@
     "\"\"\"\n",
     "Your code here\n",
     "\"\"\"\n",
-    "app_train['AMT_INCOME_TOTAL_Z_BY_CHILDREN_GRP-TARGET'] = grouped_df.apply(lambda x: (x - x.mean()) / x.std())\n",
+    "app_train['AMT_INCOME_TOTAL_Z_BY_CHILDREN_GRP-TARGET'] = grouped_df.apply(lambda x: (x - np.mean(x)) / np.std(x))\n",
     "\n",
     "app_train[['AMT_INCOME_TOTAL','AMT_INCOME_TOTAL_Z_BY_CHILDREN_GRP-TARGET']].head()"
    ]
