--- a/homework/Day_010_HW.ipynb
+++ b/homework/Day_010_HW.ipynb
@@ -471,6 +471,12 @@
     "\n",
     "app_train.corr()['TARGET'].sort_values(ascending = True).head(15)#最小15\n",
     "app_train.corr()['TARGET'].sort_values(ascending = False).head(15)#最大15\n",
+    "\n",
+    "#correlations = app_train.corr()['TARGET'].sort_values()\n",
+    "\n",
+    "# 顯示相關係數最大 / 最小的各15個欄位名稱\n",
+    "#print('Most Positive Correlations:\\n', correlations.tail(15))\n",
+    "#print('\\nMost Negative Correlations:\\n', correlations.head(15))\n",
     "\n"
    ]
   },
