--- a/homework/Day_017_HW.ipynb
+++ b/homework/Day_017_HW.ipynb
@@ -32,20 +32,23 @@
    "source": [
     "# 作業1\n",
     "* 下列A~E五個程式區塊中，哪一塊是特徵工程?\n",
-    "Ans:B\n",
-    "\n",
+    "  \n",
+    "  \n",
+    "  程式區塊 C\n",
     "# 作業2\n",
     "* 對照程式區塊 B 與 C 的結果，請問那些欄位屬於\"類別型欄位\"? (回答欄位英文名稱即可) \n",
-    "Ans:C\n",
+    "  \n",
+    "  Ans:Name, Sex, Ticket, Cabin, Embarked 等五個欄位\n",
     "\n",
     "# 作業3\n",
     "* 續上題，請問哪個欄位是\"目標值\"?\n",
-    "Ans:sub"
+    "  \n",
+    "  Ans:Survived"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +57,7 @@
        "(891, 12)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
